--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "longhinsamuele/yii2-qr",
+  "name": "samuelelonghin/yii2-qr",
   "description": "new Yii2 ActiveRecord ",
   "type": "yii2-extension",
   "keywords": [
