--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "samuelelonghin/yii2-qr",
   "description": "new Yii2 ActiveRecord ",
   "type": "yii2-extension",
+  "version":"1.1.0",
   "keywords": [
     "yii2",
     "extension",
